Update privacy policy with more third-party services
Added additional third-party services to privacy policy section.

--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
             The app does use third-party services that may collect information used to identify you. We use advertising to keep the app free. Link to the privacy policy of third-party service providers used by the app:
         </p>
         <ul>
-            <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google AdMob & AdSense</a></li>
-        </ul>
+    <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google AdMob & AdSense</a></li>
+    <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li>
+    <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li>
+    <li><a href="https://www.applovin.com/privacy/" target="_blank" rel="noopener noreferrer">AppLovin</a></li>
+    <li><a href="https://www.start.io/policy/privacy-policy/" target="_blank" rel="noopener noreferrer">StartApp</a></li>
+</ul>
 
         <h2>Log Data</h2>
         <p>
