--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Doctor Bangladesh</title>
     <style>
-        /* CSS কোড এখানে যুক্ত করা হয়েছে */
-
-        /* ভেরিয়েবল ব্যবহার করে কালার নির্ধারণ */
+        /* CSS variables for theming */
         :root {
             --background-color: #F7F9FC;
             --text-color: #212121;
@@ -15,7 +13,7 @@
             --link-color: #00796B;
         }
 
-        /* সিস্টেম ডার্ক মোডে থাকলে কালার পরিবর্তন হবে */
+        /* Dark mode theme */
         @media (prefers-color-scheme: dark) {
             :root {
                 --background-color: #121212;
@@ -25,7 +23,7 @@
             }
         }
 
-        /* বেসিক পেজ স্টাইল */
+        /* Basic page styles */
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
             margin: 0;
@@ -34,14 +32,14 @@
             line-height: 1.6;
         }
 
-        /* কন্টেইনার স্টাইল */
+        /* Container styles */
         .container {
             max-width: 800px;
             margin: 0 auto;
             padding: 20px 25px 40px 25px;
         }
 
-        /* হেডিং স্টাইল */
+        /* Heading styles */
         h1 {
             font-size: 24px;
             font-weight: bold;
@@ -57,13 +55,13 @@
             color: var(--heading-color);
         }
 
-        /* প্যারাগ্রাফ স্টাইল */
+        /* Paragraph styles */
         p {
             font-size: 16px;
             margin-bottom: 15px;
         }
 
-        /* লিস্ট স্টাইল */
+        /* List styles */
         ul {
             padding-left: 20px;
         }
@@ -73,7 +71,7 @@
             margin-bottom: 8px;
         }
 
-        /* লিঙ্ক স্টাইল */
+        /* Link styles */
         a {
             color: var(--link-color);
             text-decoration: none;
@@ -87,7 +85,7 @@
 <body>
     <div class="container">
         <h1>Privacy Policy for Doctor Bangladesh</h1>
-        <p>Last updated: October 14, 2025</p>
+        <p>Last updated: October 16, 2025</p>
 
         <p>
             RHR NET built the Doctor Bangladesh (also referred to as DoctorBD) app as a Free app. This SERVICE is provided by RHR NET at no cost and is intended for use as is.
@@ -117,13 +115,15 @@
             The app does use third-party services that may collect information used to identify you. We use advertising to keep the app free. Link to the privacy policy of third-party service providers used by the app:
         </p>
         <ul>
-    <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google AdMob & AdSense</a></li>
-    <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li>
-    <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li>
-    <li><a href="https://www.applovin.com/privacy/" target="_blank" rel="noopener noreferrer">AppLovin</a></li>
-    <li><a href="https://www.start.io/policy/privacy-policy/" target="_blank" rel="noopener noreferrer">StartApp</a></li>
-</ul>
-
+            <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google AdMob & AdSense</a></li>
+            <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li>
+            <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li>
+            <li><a href="https://www.applovin.com/privacy/" target="_blank" rel="noopener noreferrer">AppLovin</a></li>
+            <li><a href="https://www.start.io/policy/privacy-policy/" target="_blank" rel="noopener noreferrer">StartApp</a></li>
+        </ul>
+        <p>
+            <strong>Disclaimer:</strong> We are not responsible for the data collected by these third-party advertising companies. Please review their respective privacy policies for more information on how they handle your data.
+        </p>
         <h2>Log Data</h2>
         <p>
             We want to inform you that whenever you use our Service, in a case of an error in the app, we collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.
@@ -133,7 +133,12 @@
         <p>
             We value your trust in providing us your Personal Information. We do not share, sell, or rent your personally identifiable information to any third parties for any purpose. The information collected through the "Join Doctor" feature is used solely to display doctor profiles within the Doctor Bangladesh app.
         </p>
-
+        <p>
+            Specifically, sensitive information such as your **Doctor's Email, Personal Mobile Number, and BM&DC Number** collected through the "Join Doctor" form is kept confidential and is not shared publicly. Similarly, any data related to user **login and registration** is strictly for internal use and is not shared.
+        </p>
+        <p>
+            Most of the doctor information displayed in our app is collected from publicly available sources on Google. If you have any concerns about your information, please contact the admin.
+        </p>
         <h2>Security</h2>
         <p>
             We strive to use commercially acceptable means of protecting your Personal Information. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
